# Akita-Geofence-Notifier-for-Meshtastic

./: .dockerignore  Dockerfile  LICENSE  MANIFEST.in  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.cfg
akita_geofence_notifier/: __init__.py
core/: config.py  distance.py  geofence.py  gps.py  meshtastic_utils.py  models.py  notification.py  stationary.py
web/: app.py
web/static/: style.css
web/templates/: base.html  config.html  index.html
