# --- File: setup.cfg ---

[metadata]
# Provides hints for setuptools on how to find dynamic metadata specified in pyproject.toml
# Get the version from the __version__ attribute in the specified module
version = attr: akita_geofence_notifier.__version__
# Get the long description from the README.md file
long_description = file: README.md
long_description_content_type = text/markdown # Specify content type for PyPI rendering

[options]
# Find packages automatically within the project structure
# Assumes your source code is directly inside 'akita_geofence_notifier/' directory
packages = find:
# If your source code was in a 'src/' directory, you'd use:
# package_dir = = src
# packages = find: {where = src}

# --- Include non-code files inside the package ---
# This ensures templates/static files are found when installed.
include_package_data = True

# Specify data files explicitly if include_package_data is not sufficient
# or for more control. This tells setuptools where the data files are relative
# to the package directory.
[options.package_data]
akita_geofence_notifier.web = templates/*, static/*

[options.packages.find]
# Where to look for packages ('.' means the directory containing setup.cfg)
where = .
# Exclude tests or other directories from being installed as packages
exclude =
    tests*
    docs*
    examples*

